@@ -1,4 +1,8 @@
-Mon Oct 24 10:49:50 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+Mon Oct 24 10:51:09 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* complex.c (Init_Complex): undefine methods inherited from
+	  Comparable, because Complex does not have <=> method.
+	  [Bug #12866]
 
 	* class.c (rb_undef_methods_from): undefine methods defined in
 	  super from klass.
